[project]
name = "ywhealth"
version = "0.1.0"
description = ""
authors = [
    {name = "Yashar Najafi"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "25.1.0"
isort = "6.0.1"
flake8 = "7.1.2"

